--- a/SmartGel/view/SmartGelHistoryCollectionViewCell.xib
+++ b/SmartGel/view/SmartGelHistoryCollectionViewCell.xib
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -18,10 +19,10 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="test.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="Q1B-fH-NqC">
-                        <rect key="frame" x="0.0" y="0.0" width="141" height="196"/>
+                        <rect key="frame" x="0.0" y="0.0" width="141" height="176"/>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tou-ip-JgE">
-                        <rect key="frame" x="0.0" y="196" width="141" height="60"/>
+                        <rect key="frame" x="0.0" y="176" width="141" height="80"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Estimated Value: -.-" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C3F-1F-JTq">
                                 <rect key="frame" x="5" y="5" width="133" height="16"/>
@@ -29,14 +30,20 @@
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Estimated Value: -.-" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cYK-qX-QMy">
+                                <rect key="frame" x="6" y="23" width="129" height="16"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
+                                <color key="textColor" red="0.69803921568627447" green="0.70588235294117641" blue="0.69803921568627447" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="14-09-2017 23:58:00" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l3y-98-9hp">
-                                <rect key="frame" x="5" y="23" width="133" height="14.5"/>
+                                <rect key="frame" x="5" y="41" width="133" height="14.5"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                                 <color key="textColor" red="0.69803921568627447" green="0.70588235294117641" blue="0.69803921568627447" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No. 98 building F23 Taxian Street" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Nc-Ke-a4J">
-                                <rect key="frame" x="5" y="39.5" width="133" height="14.5"/>
+                                <rect key="frame" x="5" y="57.5" width="133" height="14.5"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                                 <color key="textColor" red="0.69803921568627447" green="0.70588235294117641" blue="0.69803921568627447" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -45,12 +52,14 @@
                         <color key="backgroundColor" red="0.14901960784313725" green="0.1764705882352941" blue="0.21176470588235294" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="l3y-98-9hp" firstAttribute="leading" secondItem="Tou-ip-JgE" secondAttribute="leading" constant="5" id="10C-IQ-8iR"/>
+                            <constraint firstItem="cYK-qX-QMy" firstAttribute="top" secondItem="C3F-1F-JTq" secondAttribute="bottom" constant="2" id="1CG-XZ-4x9"/>
                             <constraint firstItem="C3F-1F-JTq" firstAttribute="leading" secondItem="Tou-ip-JgE" secondAttribute="leading" constant="5" id="5uc-bb-NaP"/>
                             <constraint firstAttribute="trailing" secondItem="0Nc-Ke-a4J" secondAttribute="trailing" constant="3" id="XK2-7h-OG3"/>
-                            <constraint firstAttribute="height" constant="60" id="ahM-Rk-iNf"/>
+                            <constraint firstAttribute="height" constant="80" id="ahM-Rk-iNf"/>
                             <constraint firstItem="C3F-1F-JTq" firstAttribute="top" secondItem="Tou-ip-JgE" secondAttribute="top" constant="5" id="fBW-xl-SPs"/>
                             <constraint firstItem="0Nc-Ke-a4J" firstAttribute="leading" secondItem="Tou-ip-JgE" secondAttribute="leading" constant="5" id="h4i-W4-iDi"/>
-                            <constraint firstItem="l3y-98-9hp" firstAttribute="top" secondItem="C3F-1F-JTq" secondAttribute="bottom" constant="2" id="jYe-9H-7Tv"/>
+                            <constraint firstItem="l3y-98-9hp" firstAttribute="top" secondItem="cYK-qX-QMy" secondAttribute="bottom" constant="2" id="iTq-Cw-Zia"/>
+                            <constraint firstItem="cYK-qX-QMy" firstAttribute="leading" secondItem="Tou-ip-JgE" secondAttribute="leading" constant="6" id="kqQ-kJ-p8u"/>
                             <constraint firstItem="0Nc-Ke-a4J" firstAttribute="top" secondItem="l3y-98-9hp" secondAttribute="bottom" constant="2" id="sYu-c2-zMd"/>
                             <constraint firstAttribute="trailing" secondItem="l3y-98-9hp" secondAttribute="trailing" constant="3" id="uOb-49-FT3"/>
                             <constraint firstAttribute="trailing" secondItem="C3F-1F-JTq" secondAttribute="trailing" constant="3" id="vCv-Sh-zSw"/>
@@ -71,6 +80,7 @@
             <connections>
                 <outlet property="dateLabel" destination="l3y-98-9hp" id="1rl-aZ-Fkl"/>
                 <outlet property="locationLabel" destination="0Nc-Ke-a4J" id="bJ7-mb-kbN"/>
+                <outlet property="tagLabel" destination="cYK-qX-QMy" id="nJZ-SU-742"/>
                 <outlet property="takenImageView" destination="Q1B-fH-NqC" id="qHs-fI-Kd1"/>
                 <outlet property="valueLabel" destination="C3F-1F-JTq" id="WcD-HX-Ydp"/>
             </connections>
